# rhino

./: .gitignore  control.py  log.py  main.py  pyproject.toml  test.py
examples/: hound.py
logs/: hound_log_20251214_124238.csv  hound_log_20251214_124317.csv  hound_log_20251214_124416.csv  hound_log_20251214_124454.csv
src/examples/: run_hound.py  run_rhino.py
src/rhino/: __init__.py
src/rhino/robots/: __init__.py  build.py  configs.py  robot.py
src/rhino/utils/: _typing.py  control.py  log.py
