[project]
name = "rhino"
version = "0.1.0"
description = "Python controller for the Rhino robot at MOON Lab, IISER Bhopal"
readme = "README.md"
authors = [
    { name = "Deepanshu Raj", email = "deepanshu23@iiserb.ac.in" },
    { name = "Sattwik Kumar Sahu", email = "sattwik21@iiserb.ac.in" },
]
requires-python = ">=3.10"
dependencies = ["mavproxy>=1.8.74", "optional>=0.0.1", "pymavlink>=2.4.49"]

[project.scripts]
rhino = "rhino:main"
rhino_ex = "examples.run_rhino:main"
hound_ex = "examples.run_hound:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.14.9"]
